<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForecastFragment"
    android:background="#20FF0000"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/monday" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/sunny_n23c_30c"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tuesday" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/sunny_n23c_30c"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/wednesday" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />
        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:text="@string/sunny_n23c_30c"
            android:gravity="center"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/thursday" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunny_n23c_30c" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/friday" />

        <ImageView
            android:layout_width="210dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunny_n23c_30c" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/saturday" />

        <ImageView
            android:layout_width="212dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunny_n23c_30c" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunday" />

        <ImageView
            android:layout_width="212dp"
            android:layout_height="63dp"
            android:layout_gravity="center"
            android:src="@drawable/sunny" />

        <TextView
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sunny_n23c_30c" />

    </LinearLayout>



</LinearLayout>
